# Bright-Pro

./: .env.example  .gitignore  LICENSE  README.md  agentic_sample_ids.json  bright_pro_data.py  environment.yml
agentic_eval_outputs/: README.md
agentic_retrieval/: .gitignore  README.md  pyproject.toml
agentic_retrieval/scripts_evaluation/: aer.py  aggregate_cost.py  alpha_ndcg.py  dataset_eval.py  judge.py  retrieval_evaluation.py  sample_agentic_qids.py  test_aer.py  test_judge_reliability.py  test_retrieval_evaluation.py
agentic_retrieval/search_agent/: answers_from_runs.py  openai_fixed_turn.py  openai_new.py  prompts.py  qwen_new.py  utils.py
agentic_retrieval/searcher/searchers/: __init__.py  base.py  bm25_searcher.py  grit_searcher.py  inst_searcher.py  qwen3_family_searcher.py  qwen_searcher.py  reasonir_searcher.py
retrieval/: README.md  _tf_compat.py  metrics.py  qwen3_embedding.py  requirements.txt  retrievers.py  run.py  run_openai_batch.py  test_metrics.py
retrieval/configs/diver-1020/: biology.json
retrieval/configs/embeddinggemma/: sustainable_living.json
retrieval/evaluation/: alpha-ndcg-evaluation.py  weighted_aspect_recall.py
